final. tests remained

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:7jHBmK965BFOPvumt5etFE0jH1cHrq+JUlDi4MjerXU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=todo
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=83130014
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,3 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FAKE_TASKS_COUNT=100
+FAKE_USERS_COUNT=100
+
+TASK_CHUNK_SIZE=100
+TASKS_AUTO_COMPLETE_BROADCAST=true
